----------------------------------------------------------------------
 OmegaT 3.1.9 update 4 
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.1.9 update 4 vs. 3.1.9 update 3

  Bug fixes:

  - Mac: With the included JRE, it was not possible to launch scripts
opening files or folders

  - Team project: URL used for checkout is not trimmed 
  https://sourceforge.net/p/omegat/bugs/764/

----------------------------------------------------------------------
 OmegaT 3.1.9 update 3 (2015-07-10)
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.1.9 update 3 vs. 3.1.9 update 2

  Bug fixes:

  - When a segment contained only protected text, and that the
translation contained text, an error occurred when trying to create
the translated document, resulting in the translated document being 
empty

  Localisation updates:

  - New Norwegian localisation (UI, Instant start, scripts, readme)

----------------------------------------------------------------------
 OmegaT 3.1.9 update 2 (2015-06-03)
----------------------------------------------------------------------
   2 Enhancements
   3 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.9 update 2 vs. 3.1.9 update 1

  Other enhancements:

  - Updated LanguageTool to 2.2

  - *.strings (Mac OS X localisation format) was added to the Key=value 
filter. That's only a partial solution, as " and ; characters remain
in the translatable text, and have to be preserved by the translator.

  Bug fixes:

  - In the default source document exclusion patterns, "CVS" folders were
entered as "CSV"

  - Too many duplicate segments in the popup menu